--- a/bio.html
+++ b/bio.html
@@ -71,6 +71,106 @@ const questions = [
   {q: "Cell biology Q18: What are plasmids?", a: "Small circular DNA in bacteria.", cat: "Cell biology"},
   {q: "Cell biology Q19: Describe binary fission.", a: "Bacterial cell divides into two genetically identical cells.", cat: "Cell biology"},
   {q: "Cell biology Q20: What is the function of the vacuole?", a: "Stores cell sap and maintains cell rigidity.", cat: "Cell biology"},
+  {q: "Cell biology Q26: What is mitosis?", a: "A type of cell division producing two genetically identical daughter cells.", cat: "Cell biology"},
+  {q: "Cell biology Q27: What is the purpose of mitosis?", a: "For growth, repair and asexual reproduction.", cat: "Cell biology"},
+  {q: "Cell biology Q28: What is meiosis?", a: "A type of cell division producing four genetically different gametes.", cat: "Cell biology"},
+  {q: "Cell biology Q29: How many chromosomes are in human gametes?", a: "23 chromosomes.", cat: "Cell biology"},
+  {q: "Cell biology Q30: What is the difference between haploid and diploid cells?", a: "Haploid cells have one set of chromosomes; diploid cells have two.", cat: "Cell biology"},
+  {q: "Cell biology Q31: What is the function of the cell membrane?", a: "It controls movement of substances into and out of the cell.", cat: "Cell biology"},
+  {q: "Cell biology Q32: What are lysosomes?", a: "Organelles containing enzymes that digest waste or old cell parts.", cat: "Cell biology"},
+  {q: "Cell biology Q33: How are nerve cells adapted to their function?", a: "They have long axons and myelin sheaths for fast signal transmission.", cat: "Cell biology"},
+  {q: "Cell biology Q34: How are palisade cells specialised?", a: "They have many chloroplasts for photosynthesis.", cat: "Cell biology"},
+  {q: "Cell biology Q35: What is the importance of the spindle in mitosis?", a: "It separates chromatids to opposite poles of the cell.", cat: "Cell biology"},
+  {q: "Cell biology Q36: What happens during interphase?", a: "The cell grows and DNA is replicated.", cat: "Cell biology"},
+  {q: "Cell biology Q37: What happens during prophase of mitosis?", a: "Chromosomes condense and spindle fibres form.", cat: "Cell biology"},
+  {q: "Cell biology Q38: What happens during metaphase of mitosis?", a: "Chromosomes line up along the cell equator.", cat: "Cell biology"},
+  {q: "Cell biology Q39: What happens during anaphase of mitosis?", a: "Sister chromatids are pulled to opposite poles.", cat: "Cell biology"},
+  {q: "Cell biology Q40: What happens during telophase of mitosis?", a: "Nuclear membranes reform and the cell prepares to divide.", cat: "Cell biology"},
+  {q: "Cell biology Q41: What is cytokinesis?", a: "Division of the cytoplasm to form two new cells.", cat: "Cell biology"},
+  {q: "Cell biology Q42: What are chromosomes made of?", a: "DNA wrapped around proteins called histones.", cat: "Cell biology"},
+  {q: "Cell biology Q43: What is a centromere?", a: "The region where sister chromatids are joined.", cat: "Cell biology"},
+  {q: "Cell biology Q44: How can mitosis be observed experimentally?", a: "By using a microscope to view root tip cells stained with dye.", cat: "Cell biology"},
+  {q: "Cell biology Q45: What is uncontrolled mitosis called?", a: "Cancer.", cat: "Cell biology"},
+  {q: "Cell biology Q46: Why do embryonic stem cells have medical potential?", a: "They can differentiate into any type of cell.", cat: "Cell biology"},
+  {q: "Cell biology Q47: What is an ethical issue with embryonic stem cells?", a: "Some believe it destroys potential human life.", cat: "Cell biology"},
+  {q: "Cell biology Q48: What are adult stem cells?", a: "Stem cells found in bone marrow, limited to certain cell types.", cat: "Cell biology"},
+  {q: "Cell biology Q49: Give one medical use of stem cells.", a: "To treat leukaemia by bone marrow transplant.", cat: "Cell biology"},
+  {q: "Cell biology Q50: What is therapeutic cloning?", a: "Creating embryos with the same DNA as a patient to produce matching stem cells.", cat: "Cell biology"},
+  {q: "Cell biology Q51: What is diffusion?", a: "The passive movement of particles from high concentration to low concentration.", cat: "Cell biology"},
+  {q: "Cell biology Q52: Give one example of diffusion in the human body.", a: "Oxygen diffuses from the alveoli into the blood.", cat: "Cell biology"},
+  {q: "Cell biology Q53: What factors affect the rate of diffusion?", a: "Concentration gradient, temperature, surface area, and distance.", cat: "Cell biology"},
+  {q: "Cell biology Q54: What is facilitated diffusion?", a: "The passive movement of molecules via carrier or channel proteins.", cat: "Cell biology"},
+  {q: "Cell biology Q55: What is active transport?", a: "Movement of substances against the concentration gradient using energy.", cat: "Cell biology"},
+  {q: "Cell biology Q56: Give one example of active transport in plants.", a: "Root hair cells absorb mineral ions from the soil.", cat: "Cell biology"},
+  {q: "Cell biology Q57: Give one example of active transport in humans.", a: "Glucose reabsorption in the kidney tubules.", cat: "Cell biology"},
+  {q: "Cell biology Q58: What is osmosis important for in plants?", a: "It maintains turgor pressure, keeping cells rigid.", cat: "Cell biology"},
+  {q: "Cell biology Q59: What happens to a plant cell in pure water?", a: "It becomes turgid as water enters by osmosis.", cat: "Cell biology"},
+  {q: "Cell biology Q60: What happens to a plant cell in concentrated sugar solution?", a: "It becomes plasmolysed as water leaves the cell.", cat: "Cell biology"},
+  {q: "Cell biology Q61: What is surface area-to-volume ratio?", a: "The ratio of an object’s surface area compared to its volume.", cat: "Cell biology"},
+  {q: "Cell biology Q62: Why do single-celled organisms rely on diffusion?", a: "They have a large surface area-to-volume ratio.", cat: "Cell biology"},
+  {q: "Cell biology Q63: Why do large organisms need exchange systems?", a: "They have small surface area-to-volume ratios so diffusion is too slow.", cat: "Cell biology"},
+  {q: "Cell biology Q64: How are alveoli adapted for gas exchange?", a: "They have a large surface area, thin walls, and good blood supply.", cat: "Cell biology"},
+  {q: "Cell biology Q65: How are villi adapted for absorption?", a: "They have thin walls, large surface area, and rich blood supply.", cat: "Cell biology"},
+  {q: "Cell biology Q66: What is the function of capillaries?", a: "They allow exchange of materials between blood and tissues.", cat: "Cell biology"},
+  {q: "Cell biology Q67: What are xylem vessels?", a: "Plant tissue transporting water and minerals from roots to leaves.", cat: "Cell biology"},
+  {q: "Cell biology Q68: What is transpiration?", a: "The evaporation of water from plant leaves.", cat: "Cell biology"},
+  {q: "Cell biology Q69: What factors affect transpiration rate?", a: "Light intensity, temperature, humidity, and wind speed.", cat: "Cell biology"},
+  {q: "Cell biology Q70: What are phloem vessels?", a: "Plant tissue transporting sugars via translocation.", cat: "Cell biology"},
+  {q: "Cell biology Q71: What is translocation?", a: "Movement of sugars from leaves to other parts of the plant.", cat: "Cell biology"},
+  {q: "Cell biology Q72: What is a stomata?", a: "Tiny pores in leaves that allow gas exchange.", cat: "Cell biology"},
+  {q: "Cell biology Q73: How do guard cells regulate stomata?", a: "They swell or shrink to open or close the pore.", cat: "Cell biology"},
+  {q: "Cell biology Q74: Why do plants close stomata at night?", a: "To reduce water loss when photosynthesis is not occurring.", cat: "Cell biology"},
+  {q: "Cell biology Q75: What is a potometer used for?", a: "To measure the rate of water uptake by a plant shoot.", cat: "Cell biology"},
+  {q: "Cell biology Q76: What is a concentration gradient?", a: "The difference in concentration between two areas.", cat: "Cell biology"},
+  {q: "Cell biology Q77: Why do cells need energy?", a: "For processes such as active transport, cell division, and protein synthesis.", cat: "Cell biology"},
+  {q: "Cell biology Q78: How is glucose transported into cells?", a: "By facilitated diffusion or active transport.", cat: "Cell biology"},
+  {q: "Cell biology Q79: What are electron micrographs?", a: "Images produced by electron microscopes showing fine cell detail.", cat: "Cell biology"},
+  {q: "Cell biology Q80: What is cell fractionation?", a: "A laboratory process to separate organelles from cells.", cat: "Cell biology"},
+  {q: "Cell biology Q81: What is the function of the Golgi apparatus?", a: "It modifies and packages proteins and lipids for transport.", cat: "Cell biology"},
+  {q: "Cell biology Q82: What is the function of the endoplasmic reticulum?", a: "It synthesises proteins (rough ER) and lipids (smooth ER).", cat: "Cell biology"},
+  {q: "Cell biology Q83: What are peroxisomes?", a: "Organelles that break down fatty acids and detoxify harmful substances.", cat: "Cell biology"},
+  {q: "Cell biology Q84: What is the role of the cytoskeleton?", a: "It provides structure, support, and aids movement within cells.", cat: "Cell biology"},
+  {q: "Cell biology Q85: What are centrioles?", a: "Structures involved in organising spindle fibres during cell division.", cat: "Cell biology"},
+  {q: "Cell biology Q86: What is the function of cilia?", a: "They move substances across the cell surface.", cat: "Cell biology"},
+  {q: "Cell biology Q87: What is the function of flagella?", a: "They enable cell movement (e.g., sperm cells).", cat: "Cell biology"},
+  {q: "Cell biology Q88: How do viruses reproduce?", a: "They hijack host cells to replicate viral particles.", cat: "Cell biology"},
+  {q: "Cell biology Q89: Why are viruses not considered living organisms?", a: "They cannot reproduce independently and lack cell structures.", cat: "Cell biology"},
+  {q: "Cell biology Q90: What is the role of chlorophyll?", a: "It absorbs light energy for photosynthesis.", cat: "Cell biology"},
+  {q: "Cell biology Q91: What is the role of amyloplasts in plant cells?", a: "They store starch granules.", cat: "Cell biology"},
+  {q: "Cell biology Q92: What is a cell culture?", a: "Growing cells under controlled laboratory conditions.", cat: "Cell biology"},
+  {q: "Cell biology Q93: Why must aseptic techniques be used in cell culture?", a: "To prevent contamination by unwanted microorganisms.", cat: "Cell biology"},
+  {q: "Cell biology Q94: How can growth rate of bacteria be calculated?", a: "By measuring population doubling time.", cat: "Cell biology"},
+  {q: "Cell biology Q95: Why are agar plates incubated at 25°C in schools?", a: "To reduce the risk of growing harmful pathogens.", cat: "Cell biology"},
+  {q: "Cell biology Q96: What is magnification?", a: "How many times larger an image is compared to the actual specimen.", cat: "Cell biology"},
+  {q: "Cell biology Q97: What is resolution?", a: "The ability to distinguish two separate points as distinct.", cat: "Cell biology"},
+  {q: "Cell biology Q98: What is the formula for magnification?", a: "Magnification = Image size / Actual size.", cat: "Cell biology"},
+  {q: "Cell biology Q99: Why do electron microscopes have higher resolution than light microscopes?", a: "Because electrons have a much shorter wavelength than light.", cat: "Cell biology"},
+  {q: "Cell biology Q100: Give one advantage of light microscopes over electron microscopes.", a: "They can be used to view living cells.", cat: "Cell biology"},
+  {q: "Cell biology Q101: What is a tissue?", a: "A group of similar cells working together to perform a function.", cat: "Cell biology"},
+  {q: "Cell biology Q102: What is an organ?", a: "A structure made of different tissues working together.", cat: "Cell biology"},
+  {q: "Cell biology Q103: What is an organ system?", a: "A group of organs working together for a common purpose.", cat: "Cell biology"},
+  {q: "Cell biology Q104: What is cell differentiation?", a: "The process by which cells become specialised for specific functions.", cat: "Cell biology"},
+  {q: "Cell biology Q105: When do most animal cells differentiate?", a: "At an early stage of development.", cat: "Cell biology"},
+  {q: "Cell biology Q106: When do most plant cells differentiate?", a: "Many plant cells can differentiate throughout life.", cat: "Cell biology"},
+  {q: "Cell biology Q107: What is the role of meristems in plants?", a: "Regions of undifferentiated cells that divide to produce new cells.", cat: "Cell biology"},
+  {q: "Cell biology Q108: What is the role of cell sap?", a: "It helps maintain internal pressure in plant cells.", cat: "Cell biology"},
+  {q: "Cell biology Q109: What is chromatin?", a: "DNA and proteins that form chromosomes in the nucleus.", cat: "Cell biology"},
+  {q: "Cell biology Q110: What are sister chromatids?", a: "Identical copies of a chromosome joined at the centromere.", cat: "Cell biology"},
+  {q: "Cell biology Q111: What is apoptosis?", a: "Programmed cell death.", cat: "Cell biology"},
+  {q: "Cell biology Q112: What is cell signalling?", a: "The process by which cells communicate via chemical signals.", cat: "Cell biology"},
+  {q: "Cell biology Q113: What is endocytosis?", a: "The process of taking substances into the cell by engulfing them in vesicles.", cat: "Cell biology"},
+  {q: "Cell biology Q114: What is exocytosis?", a: "The process of exporting substances out of a cell via vesicles.", cat: "Cell biology"},
+  {q: "Cell biology Q115: What is a hypotonic solution?", a: "A solution with lower solute concentration than the cell, causing water to enter.", cat: "Cell biology"},
+  {q: "Cell biology Q116: What is a hypertonic solution?", a: "A solution with higher solute concentration than the cell, causing water to leave.", cat: "Cell biology"},
+  {q: "Cell biology Q117: What is an isotonic solution?", a: "A solution with the same solute concentration as the cell; no net water movement.", cat: "Cell biology"},
+  {q: "Cell biology Q118: Why do red blood cells burst in pure water?", a: "Because water enters by osmosis and the cell lacks a cell wall.", cat: "Cell biology"},
+  {q: "Cell biology Q119: What is haemolysis?", a: "The bursting of red blood cells in hypotonic solution.", cat: "Cell biology"},
+  {q: "Cell biology Q120: What is crenation?", a: "The shrinking of red blood cells in hypertonic solution.", cat: "Cell biology"},
+  {q: "Cell biology Q121: What is a cell plate in plant cell division?", a: "A structure that forms during cytokinesis to separate two plant cells.", cat: "Cell biology"},
+  {q: "Cell biology Q122: How do prokaryotic cells differ from eukaryotic cells?", a: "Prokaryotes lack a true nucleus and membrane-bound organelles.", cat: "Cell biology"},
+  {q: "Cell biology Q123: Give one use of monoclonal antibodies.", a: "They can be used in pregnancy tests or to target cancer cells.", cat: "Cell biology"},
+  {q: "Cell biology Q124: What is a stem cell niche?", a: "A microenvironment that regulates stem cell behaviour.", cat: "Cell biology"},
+  {q: "Cell biology Q125: Why are specialised exchange surfaces important?", a: "They allow efficient transport of substances in large multicellular organisms.", cat: "Cell biology"},
 
   // ====================
   // Organisation (20)
