--- a/bio.html
+++ b/bio.html
@@ -195,6 +195,81 @@ const questions = [
   {q: "Organisation Q18: What lifestyle factors affect health?", a: "Diet, smoking, alcohol, exercise.", cat: "Organisation"},
   {q: "Organisation Q19: What is the function of the pancreas?", a: "Produces insulin and digestive enzymes.", cat: "Organisation"},
   {q: "Organisation Q20: What is the role of the stomach?", a: "Produces acid and enzymes to digest food.", cat: "Organisation"},
+  {q: "Organisation Q26: What is a benign tumour?", a: "A non-cancerous growth that does not spread to other parts of the body.", cat: "Organisation"},
+  {q: "Organisation Q27: What is a malignant tumour?", a: "A cancerous growth that can invade tissues and spread to other parts of the body.", cat: "Organisation"},
+  {q: "Organisation Q28: Name one lifestyle factor that increases the risk of cancer.", a: "Smoking, alcohol consumption, poor diet, or lack of exercise.", cat: "Organisation"},
+  {q: "Organisation Q29: What is the function of the heart valves?", a: "They prevent backflow of blood.", cat: "Organisation"},
+  {q: "Organisation Q30: What happens during a heart attack?", a: "Blood supply to part of the heart is blocked, damaging heart muscle.", cat: "Organisation"},
+  {q: "Organisation Q31: What is the function of alveoli?", a: "They provide a large surface area for gas exchange in the lungs.", cat: "Organisation"},
+  {q: "Organisation Q32: How are alveoli adapted for gas exchange?", a: "They have thin walls, large surface area, and a good blood supply.", cat: "Organisation"},
+  {q: "Organisation Q33: What is the function of haemoglobin?", a: "It binds to oxygen in red blood cells for transport.", cat: "Organisation"},
+  {q: "Organisation Q34: How is oxygen transported in the blood?", a: "It binds to haemoglobin to form oxyhaemoglobin.", cat: "Organisation"},
+  {q: "Organisation Q35: What is the role of platelets?", a: "They help blood clot to prevent blood loss and infection.", cat: "Organisation"},
+  {q: "Organisation Q36: What is the function of villi in the small intestine?", a: "They increase the surface area for absorption of nutrients.", cat: "Organisation"},
+  {q: "Organisation Q37: How are villi adapted for absorption?", a: "They have thin walls, a rich blood supply, and microvilli.", cat: "Organisation"},
+  {q: "Organisation Q38: What is the function of enzymes?", a: "They speed up chemical reactions by lowering activation energy.", cat: "Organisation"},
+  {q: "Organisation Q39: What happens to enzymes at high temperatures?", a: "They denature, losing their shape and activity.", cat: "Organisation"},
+  {q: "Organisation Q40: What is the optimum temperature for human enzymes?", a: "Around 37°C.", cat: "Organisation"},
+  {q: "Organisation Q41: What happens to enzymes at extreme pH values?", a: "They denature and lose function.", cat: "Organisation"},
+  {q: "Organisation Q42: What is the lock and key model?", a: "An enzyme’s active site is complementary to its specific substrate.", cat: "Organisation"},
+  {q: "Organisation Q43: What is the induced fit model?", a: "The enzyme active site changes shape slightly to fit the substrate.", cat: "Organisation"},
+  {q: "Organisation Q44: How does temperature affect enzyme activity?", a: "Rate increases with temperature until enzymes denature.", cat: "Organisation"},
+  {q: "Organisation Q45: How does substrate concentration affect enzyme activity?", a: "Higher substrate concentration increases rate until enzymes are saturated.", cat: "Organisation"},
+  {q: "Organisation Q46: What is amylase’s role?", a: "It breaks down starch into maltose.", cat: "Organisation"},
+  {q: "Organisation Q47: What is protease’s role?", a: "It breaks down proteins into amino acids.", cat: "Organisation"},
+  {q: "Organisation Q48: What is lipase’s role?", a: "It breaks down fats into fatty acids and glycerol.", cat: "Organisation"},
+  {q: "Organisation Q49: What is metabolism?", a: "The sum of all chemical reactions in the body.", cat: "Organisation"},
+  {q: "Organisation Q50: How does the liver help digestion?", a: "It produces bile which emulsifies fats and neutralises stomach acid.", cat: "Organisation"},
+  {q: "Organisation Q51: What is the function of the lungs?", a: "They exchange oxygen and carbon dioxide between air and blood.", cat: "Organisation"},
+  {q: "Organisation Q52: What is the diaphragm?", a: "A muscle that contracts and relaxes to help breathing.", cat: "Organisation"},
+  {q: "Organisation Q53: What is the trachea?", a: "The windpipe that carries air to and from the lungs.", cat: "Organisation"},
+  {q: "Organisation Q54: What are bronchi?", a: "Two main airways branching from the trachea into each lung.", cat: "Organisation"},
+  {q: "Organisation Q55: What are bronchioles?", a: "Smaller airways branching from bronchi inside the lungs.", cat: "Organisation"},
+  {q: "Organisation Q56: What is tidal volume?", a: "The amount of air breathed in or out in one normal breath.", cat: "Organisation"},
+  {q: "Organisation Q57: What is vital capacity?", a: "The maximum volume of air a person can exhale after a deep breath in.", cat: "Organisation"},
+  {q: "Organisation Q58: What is cardiac output?", a: "The volume of blood pumped by the heart per minute.", cat: "Organisation"},
+  {q: "Organisation Q59: What is stroke volume?", a: "The volume of blood pumped out of the heart in one beat.", cat: "Organisation"},
+  {q: "Organisation Q60: What is heart rate?", a: "The number of times the heart beats per minute.", cat: "Organisation"},
+  {q: "Organisation Q61: How do you calculate cardiac output?", a: "Cardiac output = stroke volume × heart rate.", cat: "Organisation"},
+  {q: "Organisation Q62: What is anaerobic respiration?", a: "Respiration without oxygen, producing lactic acid in animals.", cat: "Organisation"},
+  {q: "Organisation Q63: What causes lactic acid build-up?", a: "Anaerobic respiration during vigorous exercise.", cat: "Organisation"},
+  {q: "Organisation Q64: What is oxygen debt?", a: "The extra oxygen needed after exercise to remove lactic acid.", cat: "Organisation"},
+  {q: "Organisation Q65: How is lactic acid removed from the body?", a: "It is transported to the liver and converted back to glucose.", cat: "Organisation"},
+  {q: "Organisation Q66: What is the role of the circulatory system?", a: "To transport substances such as oxygen, nutrients, and hormones.", cat: "Organisation"},
+  {q: "Organisation Q67: What type of circulatory system do humans have?", a: "A double circulatory system.", cat: "Organisation"},
+  {q: "Organisation Q68: What is the main function of the right side of the heart?", a: "To pump deoxygenated blood to the lungs.", cat: "Organisation"},
+  {q: "Organisation Q69: What is the main function of the left side of the heart?", a: "To pump oxygenated blood to the body.", cat: "Organisation"},
+  {q: "Organisation Q70: What separates the right and left sides of the heart?", a: "The septum.", cat: "Organisation"},
+  {q: "Organisation Q71: What is haemoglobin?", a: "A protein in red blood cells that binds to oxygen.", cat: "Organisation"},
+  {q: "Organisation Q72: What happens to haemoglobin in the lungs?", a: "It binds to oxygen to form oxyhaemoglobin.", cat: "Organisation"},
+  {q: "Organisation Q73: What happens to oxyhaemoglobin in tissues?", a: "It releases oxygen for respiration.", cat: "Organisation"},
+  {q: "Organisation Q74: What is the role of the lymphatic system?", a: "It returns excess tissue fluid to the bloodstream and helps fight infection.", cat: "Organisation"},
+  {q: "Organisation Q75: What are lymph nodes?", a: "Small structures that filter lymph and house white blood cells.", cat: "Organisation"},
+  {q: "Organisation Q76: What are enzymes?", a: "Biological catalysts made of proteins.", cat: "Organisation"},
+  {q: "Organisation Q77: Where is amylase produced in the body?", a: "In the salivary glands, pancreas, and small intestine.", cat: "Organisation"},
+  {q: "Organisation Q78: Where is protease produced in the body?", a: "In the stomach, pancreas, and small intestine.", cat: "Organisation"},
+  {q: "Organisation Q79: Where is lipase produced in the body?", a: "In the pancreas and small intestine.", cat: "Organisation"},
+  {q: "Organisation Q80: What is the role of hydrochloric acid in the stomach?", a: "It kills bacteria and provides the correct pH for protease activity.", cat: "Organisation"},
+  {q: "Organisation Q81: What is peristalsis?", a: "Waves of muscular contraction that move food through the digestive system.", cat: "Organisation"},
+  {q: "Organisation Q82: How does bile emulsify fats?", a: "It breaks large fat droplets into smaller ones, increasing surface area for lipase.", cat: "Organisation"},
+  {q: "Organisation Q83: What colour change indicates starch in an iodine test?", a: "Brown to blue-black.", cat: "Organisation"},
+  {q: "Organisation Q84: What colour change indicates sugar in Benedict’s test?", a: "Blue to green/yellow/orange/red depending on concentration.", cat: "Organisation"},
+  {q: "Organisation Q85: What colour change indicates protein in Biuret test?", a: "Blue to lilac.", cat: "Organisation"},
+  {q: "Organisation Q86: What colour change indicates lipids in ethanol test?", a: "A white cloudy emulsion forms.", cat: "Organisation"},
+  {q: "Organisation Q87: What is the role of the oesophagus?", a: "It carries food from the mouth to the stomach.", cat: "Organisation"},
+  {q: "Organisation Q88: What is the role of the liver in metabolism?", a: "It processes nutrients and detoxifies harmful substances.", cat: "Organisation"},
+  {q: "Organisation Q89: What is the role of the gall bladder?", a: "It stores and releases bile into the small intestine.", cat: "Organisation"},
+  {q: "Organisation Q90: What is the role of the pancreas in digestion?", a: "It produces digestive enzymes and secretes them into the small intestine.", cat: "Organisation"},
+  {q: "Organisation Q91: What is the role of the appendix?", a: "Its exact function is unclear, but it may play a role in immunity.", cat: "Organisation"},
+  {q: "Organisation Q92: What are the main tissues in the stomach?", a: "Muscular, glandular, and epithelial tissue.", cat: "Organisation"},
+  {q: "Organisation Q93: What is the role of muscular tissue in the stomach?", a: "It contracts to churn food and mix it with digestive juices.", cat: "Organisation"},
+  {q: "Organisation Q94: What is the role of glandular tissue in the stomach?", a: "It produces digestive enzymes and acid.", cat: "Organisation"},
+  {q: "Organisation Q95: What is the role of epithelial tissue in the stomach?", a: "It covers the inside and outside surfaces of the stomach.", cat: "Organisation"},
+  {q: "Organisation Q96: What are organ systems?", a: "Groups of organs working together to perform major body functions.", cat: "Organisation"},
+  {q: "Organisation Q97: Give an example of an organ system.", a: "The digestive system, respiratory system, or circulatory system.", cat: "Organisation"},
+  {q: "Organisation Q98: What is the function of the respiratory system?", a: "It brings oxygen into the body and removes carbon dioxide.", cat: "Organisation"},
+  {q: "Organisation Q99: What is the function of the circulatory system?", a: "It transports oxygen, nutrients, hormones, and removes waste.", cat: "Organisation"},
+  {q: "Organisation Q100: What is the function of the digestive system?", a: "It breaks down food and absorbs nutrients into the blood.", cat: "Organisation"},
 
   // 後面我會照這樣繼續寫「Infection and response」「Bioenergetics」「Homeostasis」「Inheritance」「Ecology」「Key ideas」各 20 題
 ];
