--- a/bio.html
+++ b/bio.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Biology Q&A Flashcards</title>
-<style>
-body { font-family: Arial, sans-serif; background: #f4f4f9; margin: 20px; }
-h1 { text-align: center; }
-#controls { margin: 10px; text-align: center; }
-.flashcard {
-  width: 320px; height: 200px; perspective: 1000px;
-  margin: 10px auto; display: none;
-}
-.inner {
-  position: relative; width: 100%; height: 100%;
-  transition: transform 0.6s; transform-style: preserve-3d;
-  cursor: pointer;
-}
-.flashcard.show .inner { transform: rotateY(180deg); }
-.front, .back {
-  position: absolute; width: 100%; height: 100%; backface-visibility: hidden;
-  display: flex; justify-content: center; align-items: center;
-  border: 2px solid #444; border-radius: 12px; padding: 10px;
-  text-align: center;
-}
-.front { background: #fff; }
-.back { background: #cce5ff; transform: rotateY(180deg); }
-</style>
+  <meta charset="UTF-8">
+  <title>Biology Flashcards</title>
+  <style>
+    body { font-family: Arial, sans-serif; text-align: center; margin: 20px; background: #f5f5f5; }
+    #controls { margin-bottom: 20px; }
+    .flashcard { 
+      width: 340px; max-width: 92vw; height: 220px; margin: 16px auto; 
+      perspective: 1000px; cursor: pointer; 
+    }
+    .inner { 
+      width: 100%; height: 100%; transition: transform 0.6s; transform-style: preserve-3d; 
+      position: relative; 
+    }
+    .front, .back { 
+      position: absolute; width: 100%; height: 100%; backface-visibility: hidden;
+      display: flex; justify-content: center; align-items: center;
+      border: 2px solid #444; border-radius: 12px; padding: 10px; text-align: center;
+      font-size: 18px;
+    }
+    .front { background: #fff; }
+    .back  { background: #cce5ff; transform: rotateY(180deg); }
+    .inner.show { transform: rotateY(180deg); }
+  </style>
 </head>
 <body>
-<h1>Biology Flashcards (160 Exam-style Questions)</h1>
+
+<h1>Biology Flashcards</h1>
+
 <div id="controls">
   <label>Filter by category: </label>
   <select id="categoryFilter">
@@ -48,10 +48,8 @@ h1 { text-align: center; }
   <button id="shuffleBtn">Shuffle</button>
   <span id="counter" style="margin-left:8px;"></span>
 </div>
-<div id="cards"></div>
 
 <div id="cards"></div>
-
 <script>
 const questions = [
   // ====================
@@ -433,8 +431,6 @@ const questions = [
   // 後面我會照這樣繼續寫「Infection and response」「Bioenergetics」「Homeostasis」「Inheritance」「Ecology」「Key ideas」各 20 題
 ];
   
-
-
 const cardsContainer = document.getElementById("cards");
 const filterSelect   = document.getElementById("categoryFilter");
 const prevBtn        = document.getElementById("prevBtn");
@@ -443,34 +439,30 @@ const flipBtn        = document.getElementById("flipBtn");
 const shuffleBtn     = document.getElementById("shuffleBtn");
 const counterEl      = document.getElementById("counter");
 
-// 單張模式狀態
 let filtered = [...questions];
 let index = 0;
 let isFlipped = false;
 
-// 建立單一卡片節點（固定只會存在 1 張）
 function ensureSingleCard() {
   if (!cardsContainer.firstChild) {
     const card = document.createElement("div");
     card.className = "flashcard";
-    card.style.display = "block"; // 單張永遠顯示
     card.innerHTML = `
       <div class="inner" id="cardInner">
         <div class="front" id="cardFront"></div>
         <div class="back"  id="cardBack"></div>
       </div>`;
-    // 點擊卡片也可翻面
-    card.onclick = () => toggleFlip();
+    card.addEventListener("click", (e) => {
+      const tag = e.target.tagName;
+      if (tag === "BUTTON" || tag === "SELECT") return;
+      toggleFlip();
+    });
     cardsContainer.appendChild(card);
   }
 }
 
 function updateCounter() {
-  if (filtered.length === 0) {
-    counterEl.textContent = "0 / 0";
-  } else {
-    counterEl.textContent = (index + 1) + " / " + filtered.length;
-  }
+  counterEl.textContent = filtered.length ? `${index+1} / ${filtered.length}` : "0 / 0";
 }
 
 function renderCurrent() {
@@ -479,7 +471,7 @@ function renderCurrent() {
   const front = document.getElementById("cardFront");
   const back  = document.getElementById("cardBack");
 
-  if (filtered.length === 0) {
+  if (!filtered.length) {
     front.textContent = "No questions in this category.";
     back.textContent  = "Try another filter.";
     inner.classList.remove("show");
@@ -487,61 +479,39 @@ function renderCurrent() {
     updateCounter();
     return;
   }
-
   const item = filtered[index];
   front.textContent = item.q;
   back.textContent  = item.a;
 
-  // 顯示正面
   inner.classList.remove("show");
   isFlipped = false;
-
   updateCounter();
 }
 
 function applyFilter() {
-  const val = filterSelect.value;
-  filtered = (val === "all") ? [...questions] : questions.filter(x => x.cat === val);
+  const v = filterSelect.value;
+  filtered = (v === "all") ? [...questions] : questions.filter(x => x.cat === v);
   index = 0;
   renderCurrent();
 }
 
-function nextCard() {
-  if (filtered.length === 0) return;
-  index = (index + 1) % filtered.length;
-  renderCurrent();
-}
-
-function prevCard() {
-  if (filtered.length === 0) return;
-  index = (index - 1 + filtered.length) % filtered.length;
-  renderCurrent();
-}
-
-function toggleFlip() {
-  const inner = document.getElementById("cardInner");
-  isFlipped = !isFlipped;
-  inner.classList.toggle("show", isFlipped);
-}
-
-function shuffleCurrent() {
-  // 洗牌目前的 filtered 陣列
-  for (let i = filtered.length - 1; i > 0; i--) {
-    const j = Math.floor(Math.random() * (i + 1));
+function nextCard()  { if (filtered.length) { index = (index+1) % filtered.length; renderCurrent(); } }
+function prevCard()  { if (filtered.length) { index = (index-1+filtered.length) % filtered.length; renderCurrent(); } }
+function toggleFlip(){ const inner = document.getElementById("cardInner"); isFlipped = !isFlipped; inner.classList.toggle("show", isFlipped); }
+function shuffleCurrent(){
+  for (let i = filtered.length-1; i>0; i--) {
+    const j = Math.floor(Math.random()*(i+1));
     [filtered[i], filtered[j]] = [filtered[j], filtered[i]];
   }
-  index = 0;
-  renderCurrent();
+  index = 0; renderCurrent();
 }
 
-// 事件綁定
 filterSelect.addEventListener("change", applyFilter);
-nextBtn.addEventListener("click", nextCard);
-prevBtn.addEventListener("click", prevCard);
-flipBtn.addEventListener("click", toggleFlip);
-shuffleBtn.addEventListener("click", shuffleCurrent);
+prevBtn.addEventListener("click", (e)=>{ e.stopPropagation(); prevCard(); });
+nextBtn.addEventListener("click", (e)=>{ e.stopPropagation(); nextCard(); });
+flipBtn.addEventListener("click", (e)=>{ e.stopPropagation(); toggleFlip(); });
+shuffleBtn.addEventListener("click",(e)=>{ e.stopPropagation(); shuffleCurrent(); });
 
-// 鍵盤快捷鍵：← → 前後；空白鍵翻面；S 洗牌
 document.addEventListener("keydown", (e) => {
   if (e.target.tagName === "INPUT" || e.target.tagName === "TEXTAREA") return;
   if (e.key === "ArrowRight") nextCard();
@@ -550,7 +520,6 @@ document.addEventListener("keydown", (e) => {
   else if (e.key.toLowerCase() === "s") shuffleCurrent();
 });
 
-// 初始化
 applyFilter();
 </script>
 
